tests/ui/image/gather_err.stderr
error[E0277]: the trait bound `Image<f32, OneD, spirv_std::image::ImageDepth::Unknown, spirv_std::image::Arrayed::False, spirv_std::image::Multisampled::False, Yes, spirv_std::image::ImageFormat::Unknown, Option::<AccessQualifier>::None>: HasGather` is not satisfied
  --> $DIR/gather_err.rs:15:34
   |
15 |     let r1: glam::Vec4 = image1d.gather(*sampler, 0.0, 0);
   |                                  ^^^^^^ the trait `HasGather` is not implemented for `Image<f32, OneD, spirv_std::image::ImageDepth::Unknown, spirv_std::image::Arrayed::False, spirv_std::image::Multisampled::False, Yes, spirv_std::image::ImageFormat::Unknown, Option::<AccessQualifier>::None>`
   |
   = help: the following implementations were found:
             <Image<SampledType, Cube, DEPTH, ARRAYED, spirv_std::image::Multisampled::False, SAMPLED, FORMAT, ACCESS_QUALIFIER> as HasGather>
             <Image<SampledType, Rect, DEPTH, ARRAYED, spirv_std::image::Multisampled::False, SAMPLED, FORMAT, ACCESS_QUALIFIER> as HasGather>
             <Image<SampledType, TwoD, DEPTH, ARRAYED, spirv_std::image::Multisampled::False, SAMPLED, FORMAT, ACCESS_QUALIFIER> as HasGather>

error[E0277]: the trait bound `Image<f32, ThreeD, spirv_std::image::ImageDepth::Unknown, spirv_std::image::Arrayed::False, spirv_std::image::Multisampled::False, Yes, spirv_std::image::ImageFormat::Unknown, Option::<AccessQualifier>::None>: HasGather` is not satisfied
  --> $DIR/gather_err.rs:16:34
   |
16 |     let r2: glam::Vec4 = image3d.gather(*sampler, v3, 0);
   |                                  ^^^^^^ the trait `HasGather` is not implemented for `Image<f32, ThreeD, spirv_std::image::ImageDepth::Unknown, spirv_std::image::Arrayed::False, spirv_std::image::Multisampled::False, Yes, spirv_std::image::ImageFormat::Unknown, Option::<AccessQualifier>::None>`
   |
   = help: the following implementations were found:
             <Image<SampledType, Cube, DEPTH, ARRAYED, spirv_std::image::Multisampled::False, SAMPLED, FORMAT, ACCESS_QUALIFIER> as HasGather>
             <Image<SampledType, Rect, DEPTH, ARRAYED, spirv_std::image::Multisampled::False, SAMPLED, FORMAT, ACCESS_QUALIFIER> as HasGather>
             <Image<SampledType, TwoD, DEPTH, ARRAYED, spirv_std::image::Multisampled::False, SAMPLED, FORMAT, ACCESS_QUALIFIER> as HasGather>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
